--- a/_layouts/dove.html
+++ b/_layouts/dove.html
@@ -9,6 +9,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=5.0,shrink-to-fit=no" />
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}" />
     {% include layout_head.html %}
+    <style>
+      ._header ._logo { font-size:1.5rem }
+      ._header ._logo a { color:inherit;text-decoration:none }
+      ._header ._logo a:hover { color:#0366d6 }
+    </style>
     <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"><![endif]-->
   </head>
   <body>
@@ -16,6 +21,15 @@
       <div class="_view">
         <div class="_layout _1200">
           <div class="container-lg px-3 my-5 markdown-body">
+            <header class="_header">
+              <div class="_layout">
+                {% if page.use_header == false -%}
+                <style>._header{display:none !important}</style>
+                {%- else -%}
+                <h1 class="_logo"><a href="{{ site.home_url }}/">🕊️ {{ site.title | default: '(untitled)' }}</a></h1>
+                {%- endif %}
+              </div>
+            </header>
             <nav class="_nav">
               <div class="_layout">
                 {% if page.use_nav == false -%}
