--- a/_scss/prime/css/style.scss
+++ b/_scss/prime/css/style.scss
@@ -59,11 +59,10 @@ article {
     color: color.invert(#24292e);
     background-color: color.invert(#fff);
   }
-  hr { background-color: #444 }
-  blockquote { border-color:#444 }
-  .markdown-body {
-    h1,h2 { border-color:#222 }
-  }
+  blockquote { border-color:#3f4a54 }
+  hr { background-color: #282f35 }
+  .border-gray-light { border-color:#282f35 !important }
+  .markdown-body { h1,h2 { border-color:#282f35 } }
   code,tt { background-color: rgba(color.invert(#1b1f23),.15); }
   .bg-primary {
     code,tt { background-color: rgba(color.invert(#1b1f23),.23); }
@@ -90,7 +89,6 @@ article {
       &.borderless tr { background:none }
     }
   }
-  .border-gray-light { border-color:#222 !important }
 }
 // ---------------------------------------------------------------
 ._logo { display:block }
