--- a/_source/index.html.pug
+++ b/_source/index.html.pug
@@ -33,6 +33,7 @@ block nav
     +_a([base_url,'posts'].join('/'))| Posts
     +_bull_
     +_a([base_url,'vars'].join('/'))| Variables
+  +thin_hr
 block content
   .flex(style="gap:3rem;margin:1rem auto 1rem auto")
     .f(style="min-width:350px")
