--- a/_source/_layouts/prime.pug
+++ b/_source/_layouts/prime.pug
@@ -13,17 +13,14 @@ block html
     |<!-- layout : dove/_source/_layouts/!{layout} -->
     head
       meta(charset=charset||'utf-8')/
-      |<!-- Begin Jekyll SEO tag v2.8.0 -->
-      title !{title||'(untitled)'}!{site_title?' | '+site_title:''}
-      |<!-- End Jekyll SEO tag -->
+      !='{% seo %}'
       meta(name="viewport" content="width=device-width,initial-scale=1")/
       meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")/
       meta#_color_scheme(name="color-scheme" content=color_scheme||'')/
       meta#_theme_color(name="theme-color" content=theme_color||'')/
       block style
         link#_style(rel="stylesheet" href!=`${base_url}/assets/prime/css/style.css?r=${revision}`)/
-      block layout_head
-        +layout_head
+      !='{% include layout_head.html %}'
       |<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
     body
       ._views
@@ -47,8 +44,6 @@ block html
                 +thin_hr
                 p.text-right.text-grey: small: +edit_link(path)
           //- .container
-        ._view: ._layout._1200
-          +theme_switch
-        block layout_body
-          +layout_body
+        ._view: ._layout._1200!='{% include theme_switch.html %}'
+        !='{% include layout_body.html %}'
       //- ._views
