--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,3 +2,7 @@
 layout: default
 ---
 {{ content }}
+
+<hr/>
+<h2>Other posts</h2>
+{% capture posts -%}{% include posts.md %}{%- endcapture %}{{ posts | markdownify }}
