--- a/_scss/prime/css/style.scss
+++ b/_scss/prime/css/style.scss
@@ -16,6 +16,11 @@ hr.thin {
   border-bottom:1px solid #888;
   margin:16px 0;
 }
+
+._header ._logo { font-size:1.5rem }
+._header ._logo a { color:inherit;text-decoration:none }
+._header ._logo a:hover { color:$text-blue }
+
 .hero { line-height:1.15 }
 .text-yellow { color:$text-yellow !important }
 .text-gray,.text-grey { color:$text-grey !important }
@@ -39,7 +44,7 @@ article {
   img { display:block }
 }
 .markdown-body {
-  ._header ._logo { margin-top: 0 !important }
+  ._header h1 { margin-top: .67em !important }
   .highlight { &,& pre { border-radius:5px }}
   table {
     & { display:table;border-collapse:collapse;border:1px solid;width:auto }
