--- a/_source/prime/_html.pug
+++ b/_source/prime/_html.pug
@@ -1,6 +1,8 @@
 extends /_source/_layouts/prime
 block append update_vars
   - path  = ['prime',path].join('/')
+block header
+  h1!='{% include dove_logo.html %}'
 block nav
   p: +site_nav('prime')
   +thin_hr
