--- a/_source/prime/404.html.pug
+++ b/_source/prime/404.html.pug
@@ -9,5 +9,6 @@ block content
     .f(style="padding:0 1rem")
       h2 Oops! Nothing found
       p #{ description }
+  <div style="margin-top:3rem"></div>
   hr/
-  p: +nav_common
+  !='{% include nav_common.html %}'
