--- a/_config.pug
+++ b/_config.pug
@@ -3,7 +3,7 @@
   revision     = '2511.03'
 
   title        = 'Dove'
-  description  = 'Dove is a theme development project.'
+  description  = 'A theme development project.'
   //- # title       : # the title of your site (best without the punctuation dot).
   //- # description : # a short description of your site's purpose.
 
