--- a/_scss/prime/css/style.scss
+++ b/_scss/prime/css/style.scss
@@ -71,7 +71,7 @@ article {
   }
   .ba,
   blockquote { border-color:#3f4a54 }
-  hr { background-color: #282f35 }
+  hr { &,&.thin { border-color:transparent;background-color: #282f35 }}
   .border-gray-light { border-color:#282f35 !important }
   .markdown-body { h1,h2 { border-color:#282f35 } }
   code,tt { background-color: rgba(color.invert(#1b1f23),.15); }
