--- a/_source/prime/index.html.pug
+++ b/_source/prime/index.html.pug
@@ -1,6 +1,6 @@
 extends _html
 block append vars
   - path   = 'index.html'
-  - title  = `Index`
+  - title  = `Prime`
 block content
   p: code // content for : !{title}
