--- a/_scss/prime/css/style.scss
+++ b/_scss/prime/css/style.scss
@@ -10,43 +10,11 @@
 // fixes
 body {overflow-y:scroll}
 details { margin-bottom:16px }
-hr.thin {
-  height:0;
-  background:none;
-  border-bottom:1px solid #888;
-  margin:16px 0;
-}
-
-._header ._logo { font-size:1.5rem }
-._header ._logo a { color:inherit;text-decoration:none }
-._header ._logo a:hover { color:$text-blue }
-
-.hero { line-height:1.15 }
-.text-yellow { color:$text-yellow !important }
-.text-gray,.text-grey { color:$text-grey !important }
-.text-slategray,.text-slategrey { color:$text-slategrey !important }
-
-.text-primary { color:$text-blue }
-.text-secondary { color:$text-slategrey }
-
-.text-justify{text-align:justify}
-
-.bg-primary { background-color:$text-blue }
-.bg-primary {
-  code,tt { background-color: rgba(#1b1f23,.15); }
-}
-
-.ba { border-color: #99a }
-
-.box { border-radius:5px }
-
 article {
   img { display:block }
 }
 .markdown-body {
   p { margin-top: 16px }
-  ._header h1 { margin-top: .67em !important }
-  .highlight { &,& pre { border-radius:5px }}
   table {
     & { display:table;border-collapse:collapse;border:1px solid;width:auto }
     thead tr { background-color: #f6f8fa }
@@ -55,11 +23,34 @@ article {
     &.simple { td, th { border-width:1px 0 } }
     &.borderless { &, tr, td, th { border:0;background:none } }
   }
+  img { background-color:transparent;color:#888 }
+  ._header h1 { margin-top: .67em !important }
+  .highlight { &,& pre { border-radius:5px }}
   ._footer {margin-bottom:4rem !important}
 }
-
+hr.thin {
+  height:0;
+  background:none;
+  border-bottom:1px solid transparent;
+  margin:16px 0;
+}
+._header ._logo { font-size:1.5rem }
+._header ._logo a { color:inherit;text-decoration:none }
+._header ._logo a:hover { color:$text-blue }
+.hero { line-height:1.15 }
+.text-yellow { color:$text-yellow !important }
+.text-gray,.text-grey { color:$text-grey !important }
+.text-slategray,.text-slategrey { color:$text-slategrey !important }
+.text-primary { color:$text-blue }
+.text-secondary { color:$text-slategrey }
+.text-justify{text-align:justify}
+.bg-primary { background-color:$text-blue }
+.bg-primary {
+  code,tt { background-color: rgba(#1b1f23,.15); }
+}
+.ba { border-color: #99a }
+.box { border-radius:5px }
 .itext, .isvg { line-height:.7 }
-
 .footnote,
 .reversefootnote { text-decoration:none !important }
 
@@ -69,19 +60,12 @@ article {
     color: color.invert(#24292e);
     background-color: color.invert(#fff);
   }
-  .ba,
-  blockquote { border-color:#3f4a54 }
-  hr { &,&.thin { border-color:transparent;background-color: #282f35 }}
-  .border-gray-light { border-color:#282f35 !important }
-  .markdown-body { h1,h2 { border-color:#282f35 } }
+  blockquote,.ba { border-color:#3f4a54 }
   code,tt { background-color: rgba(color.invert(#1b1f23),.15); }
-  .bg-primary {
-    code,tt { background-color: rgba(color.invert(#1b1f23),.23); }
-  }
   article {
     pre,
-    .highlight,
-    .highlight pre { background-color: color.invert(#e6e8ea); }
+    .highlight pre,
+    .highlight { background-color: color.invert(#e6e8ea); }
     .highlight {
       code { background:none }
       .err { color:#d22 }
@@ -99,6 +83,14 @@ article {
       thead tr { background-color: #111 }
       &.borderless tr { background:none }
     }
+  }
+  .markdown-body {
+    h1,h2 { border-color:#282f35 }
+  }
+  hr { background-color: #282f35 }
+  .border-gray-light { border-color:#282f35 !important }
+  .bg-primary {
+    code,tt { background-color: rgba(color.invert(#1b1f23),.23); }
   }
 }
 // ---------------------------------------------------------------
