--- a/_source/prime/404.html.pug
+++ b/_source/prime/404.html.pug
@@ -10,5 +10,5 @@ block content
       h2 Oops! Nothing found
       p #{ description }
   <div style="margin-top:3rem"></div>
-  hr/
+  hr.thin/
   !='{% include nav_common.html %}'
