--- a/_source/prime/404.html.pug
+++ b/_source/prime/404.html.pug
@@ -11,4 +11,4 @@ block content
       p #{ description }
   <div style="margin-top:3rem"></div>
   hr.thin/
-  !='{% include nav_common.html %}'
+  !='{% include nav_common.md %}'
