--- a/_source/prime/_html.pug
+++ b/_source/prime/_html.pug
@@ -5,7 +5,7 @@ block prepend front_matter
   | index: false
   +l
 block header
-  h1|{% include dove_logo.html %}
+  h1|{% include dove/logo.html %}
 block nav
   p: +site_nav('prime')
   +thin_hr
