--- a/_source/index.html.pug
+++ b/_source/index.html.pug
@@ -23,25 +23,12 @@ block content
         li: +site_nav('mallet')
         li: +site_nav('nova')
         li: +site_nav('prime')
-  //- .flex(style="gap:3rem;margin:1rem auto 1rem auto")
-    //- .f(style="min-width:350px")
-      h3.mt-0 Html
-      nav: ul.rapat
-        li: +site_nav('core')
-        li: +site_nav('mallet')
-        li: +site_nav('nova')
-        li: +site_nav('prime')
-    //- .f(style="min-width:350px")
-      h3.mt-0 Markdown
-      nav: ul.rapat
-        li: +site_nav('core')
-        li: +site_nav('mallet')
-        li: +site_nav('nova')
-        li: +site_nav('prime')
   +thin_hr
   p.text-grey These are supporting posts and pages for development puposes.
-  +capture('pages')|{% include dove_pages.md exclude="!{exclude_pages}" %}
-  +capture('posts')|{% include dove_posts.md exclude="!{exclude_posts}" %}
+  //- - exclude_pages = [ ].join(",");
+  //- - exclude_posts = [ ].join(",");
+  +capture('pages')|{% include dove/pages.md exclude="!{exclude_pages}" %}
+  +capture('posts')|{% include dove/posts.md exclude="!{exclude_posts}" %}
   .flex(style="gap:3rem")
     #pages_(style="min-width:250px")
       h3.mt-0 Pages
