--- a/_includes/preview.html
+++ b/_includes/preview.html
@@ -240,8 +240,8 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 <h2>Button links</h2>
 
 <p>
-<a href="#" onclick="event.preventDefault();" class="button bg-primary border-primary text-white">Primary</a>
-<a href="#" onclick="event.preventDefault();" class="button bg-secondary border-secondary text-black">Secondary</a>
+<a href="#" onclick="event.preventDefault();" class="button bg-primary text-white">Primary</a>
+<a href="#" onclick="event.preventDefault();" class="button bg-secondary text-secondary">Secondary</a>
 <a href="#" onclick="event.preventDefault();" class="button">Button Link</a>
 <span class="text-gray">&bull;</b>
 <a href="#" onclick="event.preventDefault();theme.change()" class="button" title="Change Theme (Alt+T)">Change Theme</a></p>
