--- a/_scss/prime/css/style.scss
+++ b/_scss/prime/css/style.scss
@@ -31,6 +31,7 @@ article {
 hr.thin {
   height:0;
   background:none;
+  background-color: #e1e4e8;
   border-bottom:1px solid transparent;
   margin:16px 0;
 }
